--- a/src/ui/inspector.css
+++ b/src/ui/inspector.css
@@ -221,22 +221,20 @@ main {
     font-family: monospace;
 }
 
-#graph-wrapper {
+#graph-container {
     background: gray;
     position: absolute;
     bottom: 0;
-    padding-bottom: 10%;
+    /*padding-bottom: 10%;*/
+    padding-bottom: 5%;
     top: 55px;
     left: 0;
     right: 0;
-    overflow: hidden;
 }
 
-#graph {
-    background: gray;
+#graph-scroller {
     position: absolute;
     bottom: 0;
-    padding-bottom: 10%;
     top: 0;
     left: 0;
     right: 0;
