divide machines sidebar vertically

--- a/src/ui/inspector.css
+++ b/src/ui/inspector.css
@@ -222,6 +222,12 @@ main {
 .sidebar.left {
     padding-top: 0;
     white-space: normal;
+    overflow: hidden;
+}
+
+.sidebar.left > div {
+    height: 50%;
+    overflow: auto;
 }
 
 #graph-container {
