--- a/src/ui/inspector.css
+++ b/src/ui/inspector.css
@@ -1,3 +1,5 @@
+@import "ui/legend.css";
+
 body {
     font: 10px Monospace;
     padding: 0;
@@ -305,48 +307,3 @@ section#settings-bar {
 .sidebar-container > div {
     height: 90% !important;
 }
-
-.legend {
-    display: none;
-    position: fixed;
-    background: gray;
-    border: 2px solid black;
-    border-radius: 5px;
-    top: 7em;
-    bottom: 3em;
-    left: 3em;
-    right: 3em;
-    padding: 1em;
-    z-index: 100;
-}
-
-.legend > div {
-    vertical-align: top;
-}
-
-.legend h4 {
-    font-size: 1.7em;
-}
-
-.legend svg {
-    height: 65px;
-    width: 65px;
-    margin-right: 1em;
-}
-
-.legend ul {
-    padding: 0;
-    margin: 0;
-}
-
-.legend ul.states li {
-    list-style: none;
-    margin-bottom: 0.5em;
-}
-
-.legend ul.states li span {
-    vertical-align: middle;
-    display: inline-block;
-    color: seashell;
-}
-
