--- a/src/ui/ui/legend.css
+++ b/src/ui/ui/legend.css
@@ -2,19 +2,40 @@
 
 .legend {
     background: gray;
+    color: silver;
     width: 800px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: flex-start;
 }
 
 .legend > div {
     vertical-align: top;
+    order: 0;
+    flex: 1 1 20%;
+    align-self: auto;
+    font-family: monospace;
 }
 
 .legend h4 {
+    color: gold;
     font-size: 1.7em;
+    margin: 0 10px 10px 0;
+    border-bottom: 1px solid darkgray;
 }
 
-.legend svg {
+.legend h5 {
+    color: gold;
+    font-size: 1.2em;
+    margin: 0 0 10px 0;
+}
+
+.legend li > *:nth-child(1) {
     margin-right: 1em;
+    color: yellow;
 }
 
 .legend ul {
@@ -22,7 +43,7 @@
     margin: 0;
 }
 
-.legend ul.states li {
+.legend ul li {
     list-style: none;
     margin-bottom: 0.5em;
 }
@@ -30,5 +51,8 @@
 .legend ul.states li span {
     vertical-align: middle;
     display: inline-block;
-    color: seashell;
+}
+
+.legend ol {
+    padding-left: 20px;
 }
