--- a/src/ui/ui/legend.css
+++ b/src/ui/ui/legend.css
@@ -2,7 +2,7 @@
 
 .legend {
     background: gray;
-    color: silver;
+    color: white;
     width: 800px;
     display: flex;
     flex-direction: row;
