Heavy rendering optimizations: - use indexeddb instead of generating a diff between the ui and the worker - inherit existing patches for rendering a single step - load a snapshot in a bulk - refactored rendering cancellation - optimized graph model updates - generate classes for graph elements in the views - optimized class diff updates Fixed asyncmachine dependency

--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -1,3 +1,5 @@
+/* TODO move the joint styles to joint.css */
+
 @import "ui/legend.css";
 @import "ui/connection-dialog.css";
 
@@ -5,176 +7,6 @@ body {
     font: 10px Monospace;
     padding: 0;
     margin: 0;
-}
-.node {
-    fill: lightsteelblue;
-    stroke: #555;
-    stroke-width: 3px;
-    padding: 5px;
-    padding-right: 10px;
-}
-.is-auto circle {
-    fill: lightgray;
-}
-.is-set circle {
-    fill: yellow;
-}
-.is-set.is-multi circle {
-    fill: #bbffb5;
-}
-circle.leaf {
-    stroke: #fff;
-    stroke-width: 1.5px;
-}
-circle.link-expanded {
-    stroke: #555;
-    stroke-width: 3px;
-    stroke-dasharray: 2px 4px;
-}
-circle.helper {
-    stroke-width: 0;
-    fill: #333;
-    opacity: 0.6;
-}
-circle.center-of-mass {
-    fill: white;
-    stroke: red;
-    stroke-width: 5px;
-}
-.uml-state-name {
-    font-size: 28px;
-    font-weight: bold;
-}
-.uml-state-separator {
-    display: none;
-}
-path.hull {
-    fill: lightsteelblue;
-    fill-opacity: 0.3;
-}
-path.hlink {
-    stroke: #333;
-    stroke-opacity: 0.5;
-    fill: none;
-    pointer-events: none;
-}
-line.link {
-    stroke: red;
-    stroke-opacity: 0.7;
-    pointer-events: none;
-}
-.group {
-    opacity: 0.5;
-}
-.node {
-    opacity: 0.8;
-}
-
-path.connection {
-    stroke-width: 4px;
-}
-
-.require path.connection {
-    stroke: #555;
-}
-.joint-link.require .labels rect {
-    stroke: #555;
-    fill: #555;
-}
-
-.drop path.connection,
-.inverted path.connection {
-    stroke: #C62828;
-    stroke-dasharray: 5 2;
-}
-.joint-link.drop .labels rect,
-.joint-link.inverted .labels rect {
-    stroke: #C62828;
-    fill: #C62828;
-}
-
-.add path.connection,
-.pipe path.connection {
-    stroke: #1976D2;
-}
-.joint-link.add .labels rect,
-.joint-link.pipe .labels rect {
-    stroke: #1976D2;
-    fill: #1976D2;
-}
-
-.joint-link .labels rect {
-    fill: #7c68fc;
-    stroke: #7c68fc;
-    stroke-width: 10;
-    rx: 5;
-    ry: 5;
-}
-
-.joint-link .labels text {
-    fill: white;
-}
-
-/* STEP REQUESTED */
-
-.joint-type-fsa-state.step-requested circle {
-    stroke: red;
-}
-
-.joint-type-fsa-state.step-requested.step-pipe circle {
-    stroke-dasharray: 126;
-    stroke-dashoffset: 79;
-}
-
-/* STEP SET */
-
-.joint-type-fsa-state.step-set circle {
-    fill: #ffb40b;
-}
-
-.joint-type-fsa-state.step-set text {
-    fill: black;
-}
-
-/* STEP DROP */
-
-.joint-type-fsa-state.step-drop circle {
-    fill: brown;
-}
-
-.joint-type-fsa-state.step-drop text {
-    fill: white;
-}
-
-/* STEP CANCEL */
-
-.joint-type-fsa-state.step-cancel circle {
-    fill: black;
-    stroke: red;
-}
-
-.joint-type-fsa-state.step-cancel text {
-    fill: white;
-}
-
-/* DURING TRANSITION */
-
-#graph .viewport > * {
-    opacity: 1;
-    transition-duration: 0.5s;
-}
-
-.is-touched path.connection {
-    stroke-width: 6px;
-}
-
-#graph.during-transition .joint-viewport > :not(.is-touched) {
-    opacity: 0.3;
-    transition-duration: 0.5s;
-}
-
-#graph.during-transition .connection-wrap {
-    stroke: transparent;
 }
 
 .flex {
