--- a/src/inspector/joint/joint.css
+++ b/src/inspector/joint/joint.css
@@ -1,4 +1,6 @@
-/*! JointJS v0.9.6 - JavaScript diagramming library  2015-12-19 
+@import "./joint-graph.css";
+
+/*! JointJS v0.9.6 - JavaScript diagramming library  2015-12-19
 
 
 This Source Code Form is subject to the terms of the Mozilla Public
