--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -1,150 +1,150 @@
 /* TODO move the joint styles to joint.css */
 
-@import "ui/legend.css";
-@import "ui/connection-dialog.css";
+@import 'ui/legend.css';
+@import 'ui/connection-dialog.css';
 
 body {
-    font: 10px Monospace;
-    padding: 0;
-    margin: 0;
+  font: 10px Monospace;
+  padding: 0;
+  margin: 0;
 }
 
 .flex {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
 }
 
 .react-layout-components--box {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
 }
 
 /* LAYOUT */
 
 main {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .sidebar-container {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 
 .sidebar {
-    background: #272822;
-    color: white;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 5px;
-    margin-top: 56px;
-    overflow: auto;
-    white-space: nowrap;
-    font-family: monospace;
+  background: #272822;
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 5px;
+  margin-top: 56px;
+  overflow: auto;
+  white-space: nowrap;
+  font-family: monospace;
 }
 
 .sidebar.left h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .sidebar.left .transitions h3 {
-    border-bottom: 1px solid white;
+  border-bottom: 1px solid white;
 }
 
 .sidebar.left {
-    padding-top: 0;
-    white-space: normal;
-    overflow: hidden;
+  padding-top: 0;
+  white-space: normal;
+  overflow: hidden;
 }
 
 .sidebar.left > div {
-    height: 50%;
-    overflow: auto;
+  height: 50%;
+  overflow: auto;
 }
 
 #graph-container {
-    background: gray;
-    position: absolute;
-    bottom: 0;
-    /*padding-bottom: 10%;*/
-    padding-bottom: 5%;
-    top: 55px;
-    left: 0;
-    right: 0;
+  background: gray;
+  position: absolute;
+  bottom: 0;
+  /*padding-bottom: 10%;*/
+  padding-bottom: 5%;
+  top: 55px;
+  left: 0;
+  right: 0;
 }
 
 #graph-scroller {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
 }
 
 .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
-.toolbar input[type=file] {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    opacity: 0;
+.toolbar input[type='file'] {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0;
 }
 
 section#bottom-bar.shrink-right {
-    right: 31%;
+  right: 31%;
 }
 section#bottom-bar {
-    position: absolute;
-    bottom: 2em;
-    left: 0;
-    right: 0;
-    height: 5em;
-    padding-left: 2em;
-    padding-right: 3em;
+  position: absolute;
+  bottom: 2em;
+  left: 0;
+  right: 0;
+  height: 5em;
+  padding-left: 2em;
+  padding-right: 3em;
 }
 
 section#settings-bar {
-    padding-top: 55px;
-    position: absolute;
-    right: 31%;
-    bottom: 5em;
-    width: 11em;
+  padding-top: 55px;
+  position: absolute;
+  right: 31%;
+  bottom: 5em;
+  width: 11em;
 }
 
 #step-slider {
-    margin-left: 60px;
-    margin-top: -53px;
+  margin-left: 60px;
+  margin-top: -53px;
 }
 
 #step-counter {
-    position: absolute !important;
-    left: 48%;
-    bottom: 9px;
-    z-index: 1;
+  position: absolute !important;
+  left: 48%;
+  bottom: 9px;
+  z-index: 1;
 }
 
 .sidebar-container > div {
-    height: 90% !important;
+  height: 90% !important;
 }
