--- a/src/inspector/joint/base.css
+++ b/src/inspector/joint/base.css
@@ -1,4 +1,4 @@
-@import "graph.css";
+@import 'graph.css';
 
 /*! JointJS v0.9.6 - JavaScript diagramming library  2015-12-19
 
@@ -11,7 +11,6 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
 /*
 A complete list of SVG properties that can be set through CSS is here:
 http://www.w3.org/TR/SVG/styling.html
@@ -19,12 +18,11 @@ http://www.w3.org/TR/SVG/styling.html
 Important note: Presentation attributes have a lower precedence over CSS style rules.
 */
 
-
 /* .viewport is a <g> node wrapping all diagram elements in the paper */
 .viewport {
-   -webkit-user-select: none;
-   -moz-user-select: none;
-   user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 /*
@@ -56,11 +54,11 @@ path:not([d]) {
 }
 */
 
-[magnet=true]:not(.element) {
-   cursor: crosshair;
+[magnet='true']:not(.element) {
+  cursor: crosshair;
 }
-[magnet=true]:not(.element):hover {
-   opacity: .7;
+[magnet='true']:not(.element):hover {
+  opacity: 0.7;
 }
 
 /*
@@ -72,16 +70,15 @@ the whole group of elements. Each plugin can provide its own stylesheet.
 */
 
 .element {
-   /* Give the user a hint that he can drag&drop the element. */
-   cursor: move;
+  /* Give the user a hint that he can drag&drop the element. */
+  cursor: move;
 }
 
 .element * {
-   /* The default behavior when scaling an element is not to scale the stroke in order to prevent the ugly effect of stroke with different proportions. */
-   vector-effect: non-scaling-stroke;
-   user-drag: none;
+  /* The default behavior when scaling an element is not to scale the stroke in order to prevent the ugly effect of stroke with different proportions. */
+  vector-effect: non-scaling-stroke;
+  user-drag: none;
 }
-
 
 /*
 
@@ -94,33 +91,33 @@ very thin.
 */
 
 .connection-wrap {
-   fill: none;
-   stroke: black;
-   stroke-width: 15;
-   stroke-linecap: round;
-   stroke-linejoin: round;
-   opacity: 0;
-   cursor: move;
+  fill: none;
+  stroke: black;
+  stroke-width: 15;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  opacity: 0;
+  cursor: move;
 }
 .connection-wrap:hover {
-   opacity: .4;
-   stroke-opacity: .4;
+  opacity: 0.4;
+  stroke-opacity: 0.4;
 }
-
 
 .connection {
-    stroke: black;
-   fill: none;
-   stroke-linejoin: round;
+  stroke: black;
+  fill: none;
+  stroke-linejoin: round;
 }
 
-.marker-source, .marker-target {
-/* Cannot be in CSS otherwise it could not be overruled by attributes.
+.marker-source,
+.marker-target {
+  /* Cannot be in CSS otherwise it could not be overruled by attributes.
    fill: black;
    stroke: black;
 */
-   /* This makes the arrowheads point to the border of objects even though the transform: scale() is applied on them. */
-   vector-effect: non-scaling-stroke;
+  /* This makes the arrowheads point to the border of objects even though the transform: scale() is applied on them. */
+  vector-effect: non-scaling-stroke;
 }
 
 /*
@@ -131,90 +128,90 @@ Vertex markers are `<circle>` elements that appear at connection vertex position
 
 /* <g> element wrapping .marker-vertex-group. */
 .marker-vertices {
-   opacity: 0;
-   cursor: move;
+  opacity: 0;
+  cursor: move;
 }
 .marker-arrowheads {
-   opacity: 0;
-   cursor: move;
-   cursor: -webkit-grab;
-   cursor: -moz-grab;
-/*   display: none;   */   /* setting `display: none` on .marker-arrowheads effectivelly switches of links reconnecting */
+  opacity: 0;
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  /*   display: none;   */ /* setting `display: none` on .marker-arrowheads effectivelly switches of links reconnecting */
 }
 .link-tools {
-   opacity: 0;
-   cursor: pointer;
+  opacity: 0;
+  cursor: pointer;
 }
 .link-tools .tool-options {
-   display: none;       /* by default, we don't display link options tool */
+  display: none; /* by default, we don't display link options tool */
 }
 .link-tools .tool-remove circle {
-   fill: red;
+  fill: red;
 }
 .link-tools .tool-remove path {
-   fill: white;
+  fill: white;
 }
 .link:hover .marker-vertices,
 .link:hover .marker-arrowheads,
 .link:hover .link-tools {
-   opacity: 1;
+  opacity: 1;
 }
 
 /* <circle> element inside .marker-vertex-group <g> element */
 .marker-vertex {
-   fill: #1ABC9C;
+  fill: #1abc9c;
 }
 .marker-vertex:hover {
-   fill: #34495E;
-   stroke: none;
+  fill: #34495e;
+  stroke: none;
 }
 
 .marker-arrowhead {
-   fill: #1ABC9C;
+  fill: #1abc9c;
 }
 .marker-arrowhead:hover {
-   fill: #F39C12;
-   stroke: none;
+  fill: #f39c12;
+  stroke: none;
 }
 
 /* <circle> element used to remove a vertex */
 .marker-vertex-remove {
-   cursor: pointer;
-   opacity: .1;
-   fill: white;
+  cursor: pointer;
+  opacity: 0.1;
+  fill: white;
 }
 
 .marker-vertex-group:hover .marker-vertex-remove {
-   opacity: 1;
+  opacity: 1;
 }
 
 .marker-vertex-remove-area {
-   opacity: .1;
-   cursor: pointer;
+  opacity: 0.1;
+  cursor: pointer;
 }
 .marker-vertex-group:hover .marker-vertex-remove-area {
-   opacity: 1;
+  opacity: 1;
 }
 
 /* Cell highlighting - e.g a cell underneath the dragged link get highlighted.
    See joint.dia.cell.js highlight(); */
 .highlighted {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 /* For some reason, CSS `outline` property
    does not work on `<text>` elements. */
 text.highlighted {
-    fill: #FF0000;
+  fill: #ff0000;
 }
 
 /* `outline` doesn't work in Firefox, Opera and IE9+.
    The only engine supporting outlines on SVG elements is Webkit. */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-    .highlighted {
-        outline: 2px solid #FF0000;
-        opacity: initial;
-    }
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  .highlighted {
+    outline: 2px solid #ff0000;
+    opacity: initial;
+  }
 }
 
 /*
@@ -226,15 +223,15 @@ Do not allow adding new vertices: .connection-wrap { pointer-events: none; }
 
 /* foreignObject inside the elements (i.e joint.shapes.basic.TextBlock) */
 .element .fobj {
-    overflow: hidden;
+  overflow: hidden;
 }
 .element .fobj body {
-    background-color: transparent;
-    margin: 0px;
+  background-color: transparent;
+  margin: 0px;
 }
 .element .fobj div {
-    text-align: center;
-    vertical-align: middle;
-    display: table-cell;
-    padding: 0px 5px 0px 5px;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+  padding: 0px 5px 0px 5px;
 }
