--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -74,7 +74,7 @@ main {
 }
 
 #graph-container {
-  background: gray;
+  background: black;
   position: absolute;
   bottom: 0;
   /*padding-bottom: 10%;*/
