--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -148,3 +148,25 @@ section#settings-bar {
 .sidebar-container > div {
   height: 90% !important;
 }
+
+#minimap {
+  position: absolute;
+  z-index: 99;
+  width: 200px;
+  height: 100px;
+  right: 30px;
+  bottom: 100px;
+  background: black;
+  border: 1px solid #9a9a9a;
+}
+
+#minimap canvas {
+  width: 100%;
+}
+
+#minimap .zoom-window {
+  position: absolute;
+  border: 1px solid black;
+  background: white;
+  opacity: 0.3;
+}
