--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -161,12 +161,14 @@ section#settings-bar {
 }
 
 #minimap canvas {
-  width: 100%;
+  /*width: 100%;*/
+  /*height: 100%;*/
 }
 
 #minimap .zoom-window {
   position: absolute;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
+  border: 0;
   background: white;
   opacity: 0.3;
 }
