hover for log msg groups

--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -215,3 +215,11 @@ a:hover {
 .cell-select {
   display: inline-block;
 }
+
+div.cell-select {
+  display: block;
+}
+
+.joint-group.hover:hover {
+  background: black;
+}
